add sessions to API.
